2023-09-18  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-lex.l: Accept t and T suffix for uint<1> values.
	* libpoke/pkl-rt.pk: Adapt values printer accordingly.
	* testsuite/poke.pkl/integers-13.pk: New test.
	* testsuite/poke.pkl/integers-14.pk: Likewise.
	* testsuite/poke.pkl/integers-15.pk: Likewise.
	* testsuite/poke.pkl/integers-16.pk: Likewise.
	* testsuite/poke.map/ass-map-19.pk: Update test accordingly.
	* testsuite/poke.map/maps-int-structs-11.pk: Likewise.
	* testsuite/poke.map/maps-int-structs-6.pk: Likewise.
	* testsuite/poke.map/maps-int-union-3.pk: Likewise.
	* testsuite/poke.map/maps-int-union-4.pk: Likewise.
	* testsuite/poke.map/maps-int-union-5.pk: Likewise.
	* testsuite/poke.pkl/bconc-lvalue-6.pk: Likewise.
	* testsuite/poke.pkl/cast-integers-12.pk: Likewise.
	* testsuite/poke.pkl/cast-integers-8.pk: Likewise.
	* testsuite/poke.pkl/printf-value-15.pk: Likewise.
	* testsuite/Makefile.am (EXTRA_DIST): Add new tests.
	* doc/poke.texi (Integer Literals): Document suffixes for bit
	integer literals.

2023-09-17  Jose E. Marchesi  <jemarch@gnu.org>

	* poke/pk-diff.pk: Refer to default values of configuration
	variables in doc strings as to hold the value "initially" rather
	than "currently".

2023-09-16  Jose E. Marchesi  <jose.marchesi@oracle.com>

	* pickles/Makefile.am (dist_pickles_DATA): Add gpt.pk.

2023-09-15  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pvm-val.c (pvm_array_insert): Fix defensive check when
	array allocation grows.
	* testsuite/poke.pkl/array-3.pk: New test.
	* testsuite/Makefile.am (EXTRA_DIST): Add new test.

2023-09-10  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>

	* pickles/gpt.pk (GPT_SECTOR_SIZE): Remove.
	(GPT_SectorSize): New unit.
	(GPT_LBA): New type.
	(GPT_Header): Change type of fields to offset when appropriate.
	(GPT_Partition_Entry): Likewise.
	(GPT): Update.
	* testsuite/poke.pickles/gpt-test.pk (tests): Likewise.

2023-09-10  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>
